Fixed card button spacing

--- a/website/style.css
+++ b/website/style.css
@@ -207,7 +207,7 @@ li.navitem a {
 
 .gitlink, .hyperlink {
     display: inline-block;
-    width: 75px;
+    width: 30%;
     height: 40px;
 
     margin-bottom: 3px;
